# vhs-decode-docs

./: .gitignore  flake.nix  mkdocs.yml  pyproject.toml  test.md
docs/: 003-Audio.md  004-The-Tap-List.md  Acronyms-Guide.md  Advanced-Parameter-Adjustment.md  Advanced-RF-Analysis.md  Amplificaiton-R&D.md  CVBS-Composite-Decode.md  CX-Cards.md  Capture-&-Processing-Errors.md  Capture-Naming-Guide.md  Cleaning-&-Servicing-Guide.md  Clockgen-Mod.md  Closed-Captioning.md  Colour-Under-Tape-Signal-Chain.md  Command-List.md  Commercial Usage.md  Current-Development-State.md  Data Calculations.md  Decoding-SECAM-&-MESECAM.md  Deinterlacing.md  Diagram-Visuals.md  Digital-Tape-Guide.md  Docker-Installation.md  Documents.md  DomesDayDuplicator-Utilitys-Tools.md  Donations.md  FAQ.md  File-&-Data-Formats.md  GUI-Graphical-User-Interface.md  Hardware-Installation-Guide.md  HiFi-Decode.md  Identifying-vbi-data.md  Image_link_test.md  JSON-Metadata-format.md  LD-Tools.md  LTO-Linear-Open-Tape-Guide.md  Linux-Build.md  MacOS-Build.md  MacroVision.md  Material-Handling-Guide.md  (+51 more)
docs/assets/images/Beta/Sony_SL-2710/: Sony_SL-2710_Notes.txt
docs/assets/images/Historical Refrance & Notes/VideoMem's HiFi Decode/: VHS-HiFi.grc  VTR_head_RF_signal_test_PAL_SDL_plain_raw.grc
docs/assets/images/Signal-Examples/: CVBS-RF.CSV  VHS-FM-RF.CSV
docs/assets/images/Sony-8mm/Samsung-Video8-PAL-VPL150/: Samsung-PAL-VPL150_Notes.txt
docs/assets/images/Sony-8mm/Sony-Digital8-DCR-TRV355E/: Notes.txt
docs/assets/images/video-thumbnails/: Assets-Rights.txt
docs/stylesheets/: extra.css
(+14 files in other folders)
